EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/C_digo__c.field-meta.xml
<CustomField>
    <fullName>C_digo__c</fullName>
    <label>Código</label>
    <length>55</length>
    <type>Text</type>
</CustomField>