EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/Esquema__c.field-meta.xml
<CustomField>
    <fullName>Esquema__c</fullName>
    <label>Esquema</label>
    <length>55</length>
    <type>Text</type>
</CustomField>