EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Account__c.field-meta.xml
<CustomField>
    <fullName>hed__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Academic Program this Program Plan is for, for example, BA in Philosophy.</description>
    <inlineHelpText>El Programa académico para el que es este Plan del programa, por ejemplo licenciatura en Filosofía.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>