EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Start_Date__c</fullName>
    <description>The date this Program Plan went into effect.</description>
    <inlineHelpText>La fecha en la que entró en vigor el Plan del programa.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>