EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Version__c.field-meta.xml
<CustomField>
    <fullName>hed__Version__c</fullName>
    <description>The version of the Program Plan, for example, Spring 2020.</description>
    <inlineHelpText>La versión del plan de programa, ejemplo, Primavera 2020.</inlineHelpText>
    <label>Version</label>
    <length>25</length>
    <type>Text</type>
</CustomField>