EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/Nivel_de_estudios__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_estudios__c</fullName>
    <label>Nivel de estudios</label>
    <length>55</length>
    <type>Text</type>
</CustomField>