EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Program_Plan__c/fields/Nombre_Corto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Corto__c</fullName>
    <label>Nombre Corto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>